--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@
   color: rgba(255, 255, 255, 0.87);
 }
 
-p,
-h3
-{
-color: rgb(217, 185, 121);
+
+
+.corner {
+  border-bottom-left-radius: 80px 80px;
+  border-bottom-right-radius: 80px 80px;
 }
